--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="Description" content="Happy Birthday My Friend" />
+    <meta name="Description" content="Happy Birthday Baginda Ratu" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Happy Birthday My Brother</title>
+    <title>Happy Birthday Baginda Ratu</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -35,8 +35,8 @@
         <div class="container col-md-6 py-8 animate-bottom">
             <div class="card">
                 <div class="card-body">
-                    <p class="judul">Happy Birthday My Brother</p>
-                    <h2 class="subjudul">Adhitya Pangestu.</h2>
+                    <p class="judul">Happy Birthday Baginda Ratu</p>
+                    <h2 class="subjudul">Ayang Wawa <3.</h2>
                     <hr>
 
                     <center>
@@ -136,7 +136,7 @@
     </script>
     <script>
         var i = 0;
-        var txt = "Kekuatan ucapan adalah sebagian dari doa, dan doa yang tulus akan selalu di kabulkan. Semoga di hari lahir lu ini akan membawa keberkahan dan kesuksesan di masa depan lu kelak, Aamiin. Selamat ulang tahun buat sahabat gua yang paling sabar";
+        var txt = "Sudah setahun sejak pertama kali aku menatap wajahmu. Aku masih terbayang senyummu yang mampu meluluhkan segala rasa gundah di hatiku. Aku selalu mencintaimu dan selamanya akan mencintaimu, selamat ulang tahun!
         var speed = 120;
 
         function Gassngetik() {
