--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" style="color: #D3F3EE;" id="exampleModalLongTitle">Special Wish For Adhitya Pangestu</h5>
+                        <h5 class="modal-title" style="color: #D3F3EE;" id="exampleModalLongTitle">Special Wish For Ayang Wawa</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -101,7 +101,7 @@
                     <div class="modal-body">
                         <p id="tekss">
                         </p>
-                        <br><br> ~Wafa Rifqi Anafin.
+                        <br><br> ~Ditoo.
                     </div>
                     <audio id="lagu" src="assets/lagu/lagu.mp3" preload="auto">
 </audio>
@@ -136,7 +136,7 @@
     </script>
     <script>
         var i = 0;
-        var txt = "Sudah setahun sejak pertama kali aku menatap wajahmu. Aku masih terbayang senyummu yang mampu meluluhkan segala rasa gundah di hatiku. Aku selalu mencintaimu dan selamanya akan mencintaimu, selamat ulang tahun!
+        var txt = "Sudah setahun sejak pertama kali aku menatap wajahmu. Aku masih terbayang senyummu yang mampu meluluhkan segala rasa gundah di hatiku. Aku selalu mencintaimu dan selamanya akan mencintaimu, selamat ulang tahun!";
         var speed = 120;
 
         function Gassngetik() {
